PATCH: adjusted to comments